<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:id="@+id/LayoutFragmentEmailRegister"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapperNameFragmentEmailRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textDirection="anyRtl"
                app:hintTextAppearance="@style/HintText">

            <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/hint_name"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapperUsernameFragmentEmailRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/HintText">
            <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/hint_username"/>

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapperEmailFragmentEmailRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/HintText"
                android:layout_marginTop="4dp">

            <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapperPasswordFragmentEmailRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/HintText"
                android:layout_marginTop="4dp">

            <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/hint_password"/>

        </android.support.design.widget.TextInputLayout>

        <Button
                android:id="@+id/btnFragmentEmailRegister"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_register_btn"
                android:textColor="#efefef"
                android:textSize="15dp"
                android:text="@string/btn_register"/>
    </LinearLayout>

</LinearLayout>