<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent" android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="20dp" android:id="@+id/rootLayout"
              android:focusableInTouchMode="true"
              android:paddingLeft="20dp" android:paddingRight="20dp">
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/review_venue_title"
                    android:gravity="center"
                    android:textColor="@color/bg_register_btn"
                    android:id="@+id/txtReviewTitle" android:layout_gravity="center_horizontal"
                    />
            <android.support.design.widget.TextInputLayout
                    android:id="@+id/reviewTextWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:textDirection="rtl"
                    app:hintTextAppearance="@style/HintText"
                    >

                <EditText

                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/adding_review_hint"
                        android:ellipsize="start"
                        android:textColor="#aaa"
                        android:maxLines="25"
                        android:inputType="textMultiLine"
                        android:hint="@string/adding_review_title"/>
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/scoreContainer"
                    android:gravity="center_vertical|right|end"
                    android:layout_marginTop="20dp">
                <RatingBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/scoreRating"
                        style="@style/starRating"
                        android:fillViewport="true"
                        android:numStars="5"
                        android:stepSize="1"
                        android:rating="3.0"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/quality"
                        android:id="@+id/textView2"
                        android:layout_marginLeft="8dp"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:gravity="center_vertical|right|end"
                    android:id="@+id/costContainer"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cost_medium"
                        android:gravity="right|end"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/txtCostIndicator"/>
                <RatingBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/costRating"
                        style="@style/dollarRating"
                        android:fillViewport="true"
                        android:numStars="5"
                        android:stepSize="1"
                        android:rating="3.0"
                        android:clickable="false" android:indeterminateOnly="false" android:focusable="true"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/cost"
                        android:id="@+id/textView4" android:layout_marginLeft="8dp"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:id="@+id/decorContainer"
                    android:gravity="center_vertical|right|end"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">
                <RatingBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/decorRating"
                        style="@style/starRating"
                        android:numStars="5"
                        android:stepSize="1"
                        android:rating="3.0"
                        android:fillViewport="true"
                        />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:textAppearance="?android:attr/textAppearanceSmall" android:text="@string/decor"
                          android:id="@+id/textView5" android:layout_marginLeft="8dp"/>
            </LinearLayout>
            <Button
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:text="@string/publish_review"
                    android:textSize="20dp"
                    android:textColor="#efefef"
                    android:id="@+id/btnAddReview"
                    android:layout_marginTop="30dp" android:background="@color/bg_register_btn"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>