<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent" android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="20dp" android:id="@+id/rootLayout"
              android:focusableInTouchMode="true"
              android:paddingLeft="20dp" android:paddingRight="20dp">
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/ashojash_registration"
                    android:gravity="center"
                    android:textColor="@color/bg_register_btn"
                    android:layout_gravity="center_horizontal"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:text="@string/txtAshojashRocks"
                    android:textColor="#333"
                    android:layout_gravity="center_horizontal"/>
            <Button
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:text="@string/btn_register"
                    android:textSize="20dp"
                    android:textColor="#efefef"
                    android:id="@+id/btnRegister"
                    android:layout_marginTop="20dp" android:background="@color/bg_register_btn"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>