<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:id="@+id/fragmentEmailSigninLayout"
              android:layout_height="match_parent">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapperLoginFragmentEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/HintText">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/hint_email_or_username"/>

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapperPasswordFragmentEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/HintText"
                android:layout_marginTop="4dp">

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password" android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

        <Button
                android:id="@+id/btnFragmentEmailLogin"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_register_btn"
                android:textColor="#efefef"
                android:textSize="20dp"
                android:text="@string/btn_login"/>
    </LinearLayout>

</LinearLayout>