<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="fill_parent"
                android:layout_height="200dp"
                android:id="@+id/rootLayoutVenueBasicPhotosFragment"
                tools:context="com.ashojash.fragment.FragmentHero"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

    <ImageView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:src="@android:drawable/divider_horizontal_dark"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:scaleType="fitXY"
            android:layout_alignParentTop="true"
            android:paddingBottom="1dp"
            android:background="#d0d0d0"
            android:id="@+id/imgDivider"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/title_photos"
            android:textColor="#444"
            android:id="@+id/txtTitleVenuePhotoFragment"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/imgDivider"
            android:layout_margin="10dp"/>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewVenueBasicPicsFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:clipToPadding="false"
            android:adjustViewBounds="true"
            android:visibility="gone"
            android:layout_centerVertical="true"
            android:layout_below="@+id/txtTitleVenuePhotoFragment">
    </android.support.v7.widget.RecyclerView>

    <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:gravity="center"
            android:id="@+id/errorViewVenueBasicPicsFragment"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/txtTitleVenuePhotoFragment"
            android:layout_height="fill_parent"
            android:visibility="gone">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/error_retrieving_data"
                android:textColor="@color/text_secondary"
                android:id="@+id/txtErrorVenueBasicPicsFragment"
                android:visibility="visible"/>
    </LinearLayout>

    <Button
            android:layout_width="60dp"
            android:layout_height="35dp"
            android:text="@string/more"
            android:id="@+id/btnSeeMorePicsVenueBasicsPicsFragment"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:textColor="@color/white"
            android:background="@drawable/btn_more"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"
            android:layout_alignParentStart="true"
            android:visibility="gone"/>

</RelativeLayout>